Responsive Design(Fix): Fixed text alignment in sidemenu bar

--- a/Tutangle Responsive/styles/layout.css
+++ b/Tutangle Responsive/styles/layout.css
@@ -29,7 +29,6 @@ nav {
 }
 
 .rightmenubar {
-  text-align: center;
   width: 100%;
   background-color: #f5f5f5;
 }
