--- a/Tutangle Responsive/styles/responsive.css
+++ b/Tutangle Responsive/styles/responsive.css
@@ -8,6 +8,9 @@
   .navRightContent li:last-child {
     margin: 0 14px 0 0;
   }
+  .rightmenubar {
+    text-align: center;
+  }
 }
 @media only screen and (min-width: 600px) {
   .footerCopyright {
@@ -66,6 +69,7 @@
     width: 177px;
     background-color: #f5f5f5;
     margin-right: 14px;
+    text-align: left;
   }
 
   .navMenu li {
